[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "PyMiscell"
version = "1"
authors = [
    {name = "Huberkeep", email = "HuberkeepInGithub@hotmail.com"}
]
description = "PyMisell"
readme = "README.md"
dependencies = [time]
[project.urls]
Homepage = "https://github.com/huberkeep/PyMiscell"
